fixed scroll to the top on mobile

--- a/themes/Poison/assets/css/custom.css
+++ b/themes/Poison/assets/css/custom.css
@@ -108,3 +108,6 @@ pre code {
     outline: none;
   }
   
+  .content {
+    min-height: 100vh;
+  }
